# clidesdale

./: .gitignore  CLAUDE.md  LICENSE  README.md  conventions.md  pyproject.toml  sdale.example.json
sdale/: __init__.py  __main__.py  cli.py  config.py  logger.py  remote.py
tests/: __init__.py  test_cli.py  test_config.py  test_logger.py  test_remote.py
